Update styles.css to fix scrolling issue on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,20 @@ body,html{
   min-height: 100%;
 }
 
-body{
-  background-color: #71747ab4;
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
   background: linear-gradient(to bottom right, #2e3a4e, #71747ab4), url("https://res.cloudinary.com/knallcloud/image/upload/v1540018400/PortfolioImages/BG_03.png") no-repeat center center fixed; 
-  background-size: cover; 
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .horizontalLine{ 
